--- a/html/nft__final.html
+++ b/html/nft__final.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NFT</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
     <link rel="stylesheet" href="../css/estilo.css">
     <link rel="icon" href="../img/btc3.ico">
 </head>
@@ -45,13 +46,39 @@
         </p>
     </section>
 
-    <footer>
-        <a href="#top">Ir al inicio de la página</a><br>
-        <a href="index.html" class="click_volver_inicio">Volver al panel general</a><br>
-        <p>Visualizar el top 10 de criptomonedas del día de hoy:</p>
-        <iframe src="https://coin360.com/widget/top-10?utm_source=embed_map" frameborder="0" title="Coin360.com: Top 10 Coins" width="400" height="300"></iframe>
-    </footer>
-    
+    <div class="container">
+        <footer class="py-3 my-4">
+            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                <li class="nav-item">
+                        <a href="#top" class="nav-link px-2 text-body-secondary">
+                        Ir al inicio
+                        </a></li>
+                <li class="nav-item">
+                        <a href="crypto__final.html" class="nav-link px-2 text-body-secondary">
+                        Revisar Criptomonedas
+                        </a></li>
+                <li class="nav-item">
+                        <a href="contacto__final.html" class="nav-link px-2 text-body-secondary">
+                        ¿Querés contactarnos?
+                        </a></li>
+                <li class="nav-item">
+                        <a href="portafolio__final.html" class="nav-link px-2 text-body-secondary">
+                        Ir a tu portfolio
+                        </a></li>
+                <li class="nav-item">
+                        <a href="nft__final.html" class="nav-link px-2 text-body-secondary">
+                        NFT
+                        </a></li>
+            </ul>
+
+            <p class="text-center text-body-secondary"> Finargy.com</p>
+            <p class="text-center text-body-secondary text-black-50"> 2023</p>
+            <!--<p>Visualizar el top 10 de criptomonedas del día de hoy:</p>
+            <iframe src="https://coin360.com/widget/top-10?utm_source=embed_map" frameborder="0" title="Coin360.com: Top 10 Coins" width="400" height="300"></iframe>-->
+        </footer>
+    </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
