--- a/html/contacto__final.html
+++ b/html/contacto__final.html
@@ -14,13 +14,12 @@
 <!-- o de finanzas tipo BTC, ETH, USD, ARS -->
 
 <body>
-    <!-- CORREGIDO-->
-    <!-- Inicio del encabezado -->
-	<header class="navbar">
-		<!-- Logo -->
-		<img id="logo" src="../img/btc1.jpg" alt="logo_sitio">
-		<!-- Fin del logo -->
-		<h1>Finanzas 2GO</h1>
+                    <!-- Inicio del encabezado -->
+                    <header class="navbar">
+                        <!-- Logo -->
+                        <img class="rounded-circle" src="../img/btc1.jpg" alt="logo_sitio" width="125" height="125">
+                        <!-- Fin del logo -->
+                        <div class="sticky-top"><h1>Finanzas 2GO</h1></div>
 
         <nav>
             <ul class="menu">
@@ -33,6 +32,11 @@
         </nav>
 
 	</header>
+    <div class="container p-3 my-3 bg-primary text-white">
+        <h1 class="text-white">Bienvenido a tu página favorita acerca de finanzas</h1>
+            <p>Todas las noticias sobre macro y microeconomía, en un sólo lugar...</p>
+            <p>¡Gracias por elegirnos a diario!</p>
+    </div>
 	<!-- Fin del encabezado -->
 
 
