--- a/html/crypto__final.html
+++ b/html/crypto__final.html
@@ -11,13 +11,12 @@
 </head>
 
 <body>
-    <!-- Inicio del encabezado -->
-	<header class="navbar">
-		<!-- Logo -->
-		<img id="logo" src="../img/btc1.jpg" alt="logo_sitio">
-		<!-- Fin del logo -->
-		<h1>Finanzas 2GO</h1>
-
+                    <!-- Inicio del encabezado -->
+                    <header class="navbar">
+                        <!-- Logo -->
+                        <img class="rounded-circle" src="../img/btc1.jpg" alt="logo_sitio" width="125" height="125">
+                        <!-- Fin del logo -->
+                        <div class="sticky-top"><h1>Finanzas 2GO</h1></div>
         <nav>
             <ul class="menu">
                     <li><a href="index.html" class="mainmenu__inicio"> Panel general de finanzas</a></li>
@@ -57,10 +56,10 @@
             
         </section>
     </div>
-    <div class="container-sm mb-5 border">
+    <div class="container-sm mb-5 border ">
         <section>
                 <h2>PANEL GENERAL DE Criptomonedas</h2>
-                <article> a 
+                <article> 
 
                 </article>
         </section>
