--- a/html/contacto__final.html
+++ b/html/contacto__final.html
@@ -6,6 +6,7 @@
 	<title>Contacto 2GO</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/estilo.css">
     <link rel="icon" href="../img/btc3.ico">
 </head>
@@ -14,62 +15,115 @@
 <!-- o de finanzas tipo BTC, ETH, USD, ARS -->
 
 <body>
-                    <!-- Inicio del encabezado -->
-                    <header class="navbar">
-                        <!-- Logo -->
-                        <img class="rounded-circle" src="../img/btc1.jpg" alt="logo_sitio" width="125" height="125">
-                        <!-- Fin del logo -->
-                        <div class="sticky-top"><h1>Finanzas 2GO</h1></div>
+        <!-- Inicio del encabezado -->
+        <header class="navbar">
+            <!-- Logo -->
+            <img class="rounded-circle" src="../img/btc1.jpg" alt="logo_sitio" width="125" height="125">
+            <!-- Fin del logo -->
+            <div class="sticky-top"><h1 class="d-inline p-2 bg-dark text-white">Finanzas 2GO</h1></div>
 
-        <nav>
-            <ul class="menu">
-                    <li><a href="index.html" class="mainmenu__inicio"> Panel general de finanzas</a></li>
-                    <li><a href="crypto__final.html" class="mainmenu__inicio">Criptomonedas</a></li>
-                    <li><a href="nft__final.html" class="mainmenu__inicio">NFT</a></li>
-                    <li><a href="contacto__final.html" class="mainmenu__inicio"> ¡Contactanos!</a></li>
-                    <li><a href="portafolio__final.html" class="mainmenu__inicio"> Ingresar a mi portafolio</a></li>
-            </ul>
+            
+        <nav class="navbar sticky-top navbar-light bg-light">
+                    <a class="navbar-brand" href="#">Menú</a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="bi bi-list-nested"></span>
+                    </button>
+                        
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">IR AL INICIO <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="crypto__final.html">Criptomonedas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="nft__final.html">NFT</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacto__final.html">¡Contactanos!</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portafolio__final.html">Ingresar a mi portafolio</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
-
-	</header>
-    <div class="container p-3 my-3 bg-primary text-white">
-        <h1 class="text-white">Bienvenido a tu página favorita acerca de finanzas</h1>
-            <p>Todas las noticias sobre macro y microeconomía, en un sólo lugar...</p>
-            <p>¡Gracias por elegirnos a diario!</p>
-    </div>
+    </header>
 	<!-- Fin del encabezado -->
 
+    <a href="#" class="boton-top"><i class="fa-sharp fa-solid fa-arrow-up fa-bounce"></i>
+    </a>
 
-    <section>
-        <h2>CONTACTO</h2><br>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex eligendi, quisquam et porro non, dolores, dolorum voluptatibus odit beatae omnis magni sit? Similique corrupti ab ratione, nam aspernatur quae excepturi eveniet adipisci dignissimos, molestias quaerat suscipit quis amet praesentium voluptate qui necessitatibus nulla eaque dolorem! Molestias dignissimos nobis maxime ratione labore numquam voluptatem sapiente quaerat exercitationem esse ducimus sit, veniam consequatur ullam voluptas dolores. Inventore debitis nam, harum, fuga laudantium vero amet aliquam nisi, perspiciatis ad quasi explicabo reprehenderit accusantium repellat molestiae ab enim recusandae maxime quos aperiam. Hic tenetur ea commodi, nobis, quod perspiciatis laborum iure temporibus cupiditate accusamus in iste qui! Debitis mollitia optio aliquid provident perferendis ipsum inventore eveniet voluptate consectetur ullam hic sequi consequuntur, necessitatibus doloremque cumque reiciendis, sint nam? Assumenda dolor laboriosam non quaerat asperiores doloremque minima laborum esse tenetur vel cum nam fuga, distinctio omnis autem suscipit molestias adipisci ab quos? Illum nemo asperiores itaque esse repudiandae quo, eum eveniet harum architecto, quaerat dolore deserunt pariatur vero laboriosam placeat vel, consequuntur iusto dicta dolorem ea! Explicabo amet voluptates veniam consectetur quod, fugit, voluptate commodi asperiores laudantium minima error eligendi fugiat corporis in ut reprehenderit sapiente animi architecto, adipisci a repellat nesciunt. Optio eum consequuntur ullam sapiente facilis, architecto alias consectetur fugiat iure laborum delectus harum natus adipisci et iusto quos aperiam fugit distinctio officia odit quod voluptatum? Perspiciatis iste quaerat ab eaque dolore culpa veritatis nesciunt veniam quod eligendi neque cumque animi, totam id eius nisi itaque temporibus tempora alias, tenetur dolorem beatae magnam maiores! Dignissimos libero, nesciunt quasi accusantium sunt tenetur necessitatibus possimus vero asperiores cum eveniet molestias quam in ipsum, magni optio, voluptate similique placeat dolore obcaecati quae aut quibusdam! Velit architecto vitae ad doloremque, perspiciatis quos molestias enim aliquid nostrum quaerat cupiditate necessitatibus voluptatem iure nam omnis molestiae atque inventore iusto modi voluptatibus corrupti alias. Est ad veniam aliquam corrupti perspiciatis vitae blanditiis ullam exercitationem dolore omnis magnam ex, amet soluta sapiente earum inventore sint quo vel, velit accusantium architecto esse, ipsum labore! Dolorum ex eligendi libero molestias saepe ipsum laudantium amet a enim fugit, eos praesentium ullam iusto rem consequatur alias architecto dicta? Officiis ducimus dolores placeat maxime consequatur incidunt aut alias, quis ex aliquam, laborum tenetur quisquam totam eos modi quae! Ratione eos tenetur, magni reiciendis minima alias libero dolor aut, expedita eius maxime sunt atque cupiditate assumenda sed fugiat. Et, excepturi sequi maxime quam odio voluptates, provident ullam natus dolorem, rem nulla! Quo voluptatum provident, autem libero deleniti molestiae neque nobis repellat aperiam, nihil eos iste! Aliquam vel, eos officia animi incidunt ex laborum porro autem magni sed impedit! Quisquam aperiam libero consequuntur ea. Id nesciunt, odio ad est minima reprehenderit suscipit perferendis placeat doloremque ipsam voluptatem cumque voluptates itaque ipsum? Quaerat quam sint corporis esse perspiciatis labore illum, et, natus est aperiam magnam eaque quod vero eligendi dolor quos enim nostrum officiis eveniet omnis repellendus quasi? Quidem, atque magnam quam molestias dolorum ex incidunt tempora perferendis inventore fuga unde quas natus ipsa veniam fugit minima nobis. Tenetur provident veniam libero laboriosam dolorum quod rem illum iusto in? Non modi eaque dicta, quasi officiis neque cumque error, iure eligendi hic quam, aliquid nobis maxime. Labore, veritatis maxime? Laborum quis dolores vitae nulla, est consectetur adipisci unde maxime. Sed in deserunt porro voluptatibus corporis, quo et quam possimus, dolore doloribus error voluptate? Esse facere minima ut expedita. Saepe cum id labore quasi earum eaque, nam odit, illum porro a quo recusandae asperiores provident sed officia dolore eos mollitia? Exercitationem excepturi laborum hic quisquam libero, atque, ipsam sunt tempora officia et eius itaque placeat velit possimus dolore repudiandae? Nesciunt aperiam asperiores libero repudiandae laborum modi perferendis animi quisquam, velit quia distinctio in eius maiores voluptas laboriosam soluta omnis error alias enim. Culpa fugiat vero nesciunt consequatur repellat ratione nisi ipsa! Porro perspiciatis sunt praesentium aut repellendus reiciendis enim consequatur nobis earum quasi officia delectus, reprehenderit labore nulla facilis! Laudantium non ipsa maxime eum voluptatem pariatur exercitationem voluptates rerum totam, cupiditate eaque, in blanditiis nulla voluptate ut culpa facilis nemo dignissimos natus illo! Architecto minima voluptatem temporibus incidunt magni autem, soluta similique delectus doloribus nisi necessitatibus minus aliquam sequi ipsum tempora dolorum voluptate optio nobis porro consequuntur debitis, cum reiciendis? Vero, possimus reiciendis quis eius modi suscipit ducimus excepturi nihil ullam obcaecati iste eaque ex adipisci deserunt aspernatur aliquid rerum. Asperiores qui soluta sint in officiis culpa molestias velit. Assumenda odio est mollitia deserunt explicabo et sint, optio ducimus voluptatum adipisci id pariatur dicta harum possimus tempore sequi fugit dolorem neque cumque. Vel voluptatibus libero a, at eaque distinctio quae sed necessitatibus voluptatem dolor incidunt illum, quisquam cum, deserunt qui fugit veniam dolorum. Possimus ipsam veniam fugiat ipsa incidunt velit veritatis, esse libero dolorem exercitationem itaque quis vel quia reiciendis expedita animi deserunt voluptates tenetur eligendi, magnam corporis maxime. Consequuntur quas, deleniti sit dolore esse sapiente a blanditiis recusandae pariatur libero eius consequatur perspiciatis expedita optio minus repellat odio beatae quae perferendis ipsam! Quas, obcaecati. Temporibus laudantium omnis vel eum, accusamus blanditiis nihil veniam magnam quidem aspernatur ullam, a sint pariatur aut ipsam ex doloremque soluta recusandae! Vel nam tenetur ut odit laudantium recusandae suscipit, unde itaque doloremque nostrum nisi commodi optio nihil iusto totam minima. Assumenda similique provident rerum numquam enim nihil, unde porro id aliquam est? Recusandae cupiditate, maiores, omnis perspiciatis quod, ab doloremque voluptates quis eum blanditiis inventore quaerat rem harum aliquam culpa fugiat voluptatum voluptas soluta ullam! Ab, pariatur omnis porro distinctio vitae quasi et quos quae velit voluptates sunt laboriosam quas iusto voluptas atque laborum obcaecati dicta quo modi. Inventore dolor similique, quaerat quasi tempora necessitatibus ab repellendus? Quidem debitis, aspernatur, fuga molestias itaque dolore cupiditate totam dolores dignissimos velit expedita autem, dolorum sequi tempore praesentium? Recusandae ducimus assumenda consectetur esse? A rem, laboriosam reiciendis veritatis ab dolorum doloribus ex deleniti repellat nisi ipsam voluptates quia harum, explicabo corporis recusandae quam sed.</p>
-    </section>
+    <div class="container p-3 my-3 bg-primary text-white">
+        <h1 class="text-white">¿Buscás contactarnos o trabajar con nosotros...?</h1>
+            <p>¡Estás en el lugar correcto!</p>
+    </div>
+
+    <form class="container p-3 my-3 bg-primary text-white">
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label for="inputEmail4">Dirección de correo electrónico</label>
+                    <input type="email" class="form-control" id="inputEmail4" placeholder="Mail">
+            </div>
+
+            <div class="form-group col-md-6">
+                <label for="inputCountry4">¿País de residencia?</label>
+                    <input type="text" class="form-control" id="inputPassword4" placeholder="De dónde sos...">
+            </div>
+        </div>
+
+        <div class="form-group">
+                <label for="inputAddress">Dirección</label>
+                    <input type="text" class="form-control" id="inputAddress" placeholder="...">
+        </div>
+
+        <div class="form-group">
+                <label for="inputAddress2">¿Ciudad?</label>
+                    <input type="text" class="form-control" id="inputAddress2" placeholder="CABA, Zona norte, Zona sur...">
+        </div>
+
+
+            <div class="form-group col-md-4">
+                    <label for="inputProg">¿Sabes programar?</label>
+                        <select id="inputProg" class="form-control">
+                            <option selected>Selecciona...</option>
+                            <option>Sí</option>
+                            <option>Sí</option>
+                        </select>
+            </div>
+
+
+        <div class="form-group">
+            <div class="form-check">
+                    <input class="form-check-input" type="checkbox" id="gridCheck">
+                        <label class="form-check-label" for="gridCheck">CHEQUEAME</label>
+            </div>
+        </div>
+
+                <button type="submit" class="btn btn-primary">Sign in</button>
+    </form>
 
     <div class="container">
         <footer class="py-3 my-4">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                 <li class="nav-item">
-                        <a href="#top" class="nav-link px-2 text-body-secondary">
-                        Ir al inicio
-                        </a></li>
+                    <a href="index.html" class="nav-link px-2 text-body-secondary">
+                        <button type="button" class="btn btn-outline-primary">Ir al inicio</button>
+                    </a></li>
                 <li class="nav-item">
-                        <a href="crypto__final.html" class="nav-link px-2 text-body-secondary">
-                        Revisar Criptomonedas
-                        </a></li>
+                    <a href="contacto__final.html" class="nav-link px-2 text-body-secondary">
+                        <button type="button" class="btn btn-outline-primary">Contacto</button>
+                    </a></li>
                 <li class="nav-item">
-                        <a href="contacto__final.html" class="nav-link px-2 text-body-secondary">
-                        ¿Querés contactarnos?
-                        </a></li>
+                    <a href="portafolio__final.html" class="nav-link px-2 text-body-secondary">
+                        <button type="button" class="btn btn-outline-primary">Portafolio</button>
+                    </a></li>
                 <li class="nav-item">
-                        <a href="portafolio__final.html" class="nav-link px-2 text-body-secondary">
-                        Ir a tu portfolio
-                        </a></li>
-                <li class="nav-item">
-                        <a href="nft__final.html" class="nav-link px-2 text-body-secondary">
-                        NFT
-                        </a></li>
+                    <a href="nft__final.html" class="nav-link px-2 text-body-secondary">
+                        <button type="button" class="btn btn-outline-primary">NFT</button>
+                    </a></li>
             </ul>
-
             <p class="text-center text-body-secondary"> Finargy.com</p>
             <p class="text-center text-body-secondary text-black-50"> 2023</p>
             <!--<p>Visualizar el top 10 de criptomonedas del día de hoy:</p>
