--- a/html/nft__final.html
+++ b/html/nft__final.html
@@ -6,35 +6,51 @@
     <title>NFT</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/estilo.css">
     <link rel="icon" href="../img/btc3.ico">
 </head>
 
 <body>
-                    <!-- Inicio del encabezado -->
-                    <header class="navbar">
-                        <!-- Logo -->
-                        <img class="rounded-circle" src="../img/btc1.jpg" alt="logo_sitio" width="125" height="125">
-                        <!-- Fin del logo -->
-                        <div class="sticky-top"><h1>Finanzas 2GO</h1></div>
+        <!-- Inicio del encabezado -->
+        <header class="navbar">
+            <!-- Logo -->
+            <img class="rounded-circle" src="../img/btc1.jpg" alt="logo_sitio" width="125" height="125">
+            <!-- Fin del logo -->
+            <div class="sticky-top"><h1 class="d-inline p-2 bg-dark text-white">Finanzas 2GO</h1></div>
 
-        <nav>
-            <ul class="menu">
-                    <li><a href="index.html" class="mainmenu__inicio"> Panel general de finanzas</a></li>
-                    <li><a href="crypto__final.html" class="mainmenu__inicio">Criptomonedas</a></li>
-                    <li><a href="nft__final.html" class="mainmenu__inicio">NFT</a></li>
-                    <li><a href="contacto__final.html" class="mainmenu__inicio"> ¡Contactanos!</a></li>
-                    <li><a href="portafolio__final.html" class="mainmenu__inicio"> Ingresar a mi portafolio</a></li>
-            </ul>
+            
+        <nav class="navbar sticky-top navbar-light bg-light">
+                    <a class="navbar-brand" href="#">Menú</a>
+                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="bi bi-list-nested"></span>
+                    </button>
+                        
+            <div class="collapse navbar-collapse" id="navbarText">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">IR AL INICIO <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="crypto__final.html">Criptomonedas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="nft__final.html">NFT</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contacto__final.html">¡Contactanos!</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="portafolio__final.html">Ingresar a mi portafolio</a>
+                    </li>
+                </ul>
+            </div>
         </nav>
-
-	</header>
-    <div class="container p-3 my-3 bg-primary text-white">
-        <h1 class="text-white">Bienvenido a tu página favorita acerca de finanzas</h1>
-            <p>Todas las noticias sobre macro y microeconomía, en un sólo lugar...</p>
-            <p>¡Gracias por elegirnos a diario!</p>
-    </div>
+    </header>
 	<!-- Fin del encabezado -->
+
+    <a href="#" class="boton-top"><i class="fa-sharp fa-solid fa-arrow-up fa-bounce"></i>
+    </a>
 
     <div class="container-xl border mt-auto">
         <section>
@@ -58,25 +74,21 @@
         <footer class="py-3 my-4">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
                 <li class="nav-item">
-                        <a href="#top" class="nav-link px-2 text-body-secondary">
-                        Ir al inicio
-                        </a></li>
+                    <a href="index.html" class="nav-link px-2 text-body-secondary">
+                        <button type="button" class="btn btn-outline-primary">Ir al inicio</button>
+                    </a></li>
                 <li class="nav-item">
-                        <a href="crypto__final.html" class="nav-link px-2 text-body-secondary">
-                        Revisar Criptomonedas
-                        </a></li>
+                    <a href="contacto__final.html" class="nav-link px-2 text-body-secondary">
+                        <button type="button" class="btn btn-outline-primary">Contacto</button>
+                    </a></li>
                 <li class="nav-item">
-                        <a href="contacto__final.html" class="nav-link px-2 text-body-secondary">
-                        ¿Querés contactarnos?
-                        </a></li>
+                    <a href="portafolio__final.html" class="nav-link px-2 text-body-secondary">
+                        <button type="button" class="btn btn-outline-primary">Portafolio</button>
+                    </a></li>
                 <li class="nav-item">
-                        <a href="portafolio__final.html" class="nav-link px-2 text-body-secondary">
-                        Ir a tu portfolio
-                        </a></li>
-                <li class="nav-item">
-                        <a href="nft__final.html" class="nav-link px-2 text-body-secondary">
-                        NFT
-                        </a></li>
+                    <a href="nft__final.html" class="nav-link px-2 text-body-secondary">
+                        <button type="button" class="btn btn-outline-primary">NFT</button>
+                    </a></li>
             </ul>
 
             <p class="text-center text-body-secondary"> Finargy.com</p>
