pagina final terminada

--- a/html/contacto__final.html
+++ b/html/contacto__final.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Preentrega Proyecto final 3</title>
+	<title>¡Contactanos!</title>
     <meta name="description" content="Bienvenidos a Finargy. Tu página favorita sobre finanzas del país...">
-    <meta name="keywords" content="finanzas, Argentina, economía">
+    <meta name="keywords" content="finanzas, Argentina, economía, contacto">
     <meta name="author" content="Schenvz, ARbiop">
     <meta name="robots" content="index, follow">
     <meta name="geo.region" content="AR">
@@ -22,7 +22,7 @@
 <header class="container-fluid">
     <a href="./index.html" class="logo sticky-top" id="#" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000"><h1 class="d-inline p-2 bg-dark text-white">Finanzas2GO</h1></a>
     <div class="container d-flex align-items-center justify-content-end">
-        <button class="btn btn-dark btn-outline-ligth btn-l btn-lg hamburger_menu" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
+        <button class="btn bg-white text-black btn-outline-ligth btn-l btn-lg hamburger_menu" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
         Menú <i class="fa-solid fa-bars fa-lg"></i>
         </button>
     </div>
@@ -36,16 +36,17 @@
         </div>
         <div class="offcanvas-body">
             <!-- Logo -->
-            <img class="rounded-circle" src="./img/btc3.ico"  id="logo" alt="logo_sitio" width="125" height="125">
+            <img class="rounded-circle" src="/img/btc3.ico"  id="logo" alt="logo_sitio" width="125" height="125">
             <!-- Fin del logo -->
             <ul class="menu">
-                <li><a href="index.html" class="menu_color">Inicio</a></li>
-                <li><a href="./html/crypto__final.html" class="menu_color">Criptomonedas</a></li>
-                <li><a href="./html/nft__final.html" class="menu_color">NFT</a></li>
-                <li><a href="./html/contacto__final.html" class="menu_color">¡Contacto!</a></li>
-                <li><a href="./html/portafolio__final.html" class="menu_color">Tú portafolio</a></li>
+                <li><a href="/index.html" class="menu_color">Inicio</a></li>
+                <li><a href="/html/crypto__final.html" class="menu_color">Criptomonedas</a></li>
+                <li><a href="/html/nft__final.html" class="menu_color">NFT</a></li>
+                <li><a href="/html/contacto__final.html" class="menu_color">¡Contacto!</a></li>
+                <li><a href="/html/portafolio__final.html" class="menu_color">Tú portafolio</a></li>
             </ul>
         </div>
+        <p class="text-center text-body-secondary">Made with ❤ in Argentina</p>
     </div>
 </div>
 <!-- Offcavas fin -->
@@ -54,25 +55,22 @@
         <h1 class="text-white text-center" data-aos="zoom-in-left">¿Buscás contactarnos o trabajar con nosotros...?</h1>
             <p class="text-success text-center" data-aos="zoom-in-right">¡Estás en el lugar correcto!</p>
     </div>
-    <!-- Inicio form contact-->
+<!-- Inicio form contact-->
+<div>
     <form class="container p-3 my-3 bg-secondary bg-gradient text-white">
         <div class="form-row">
                 <div class="form-group col-md-6">
                     <label for="inputEmail4">Dirección de correo electrónico</label>
-                    <input type="email" class="form-control" id="inputEmail4" placeholder="Mail">
+                    <input type="email" class="form-control" id="inputEmail" placeholder="Mail">
                 </div>
                 <div class="form-group col-md-6">
                     <label for="inputCountry4">¿País de residencia?</label>
-                    <input type="text" class="form-control" id="inputPassword4" placeholder="De dónde sos...">
+                    <input type="text" class="form-control" id="inputCountry" placeholder="De dónde sos...">
                 </div>
-        </div>
-        <div class="form-group">
-                <label for="inputAddress">Dirección</label>
-                <input type="text" class="form-control" id="inputAddress" placeholder="...">
-        </div>
-        <div class="form-group">
-                <label for="inputAddress2">¿Ciudad?</label>
-                <input type="text" class="form-control" id="inputAddress2" placeholder="CABA, Zona norte, Zona sur...">
+                <div class="form-group col-md-6">
+                    <label for="inputCountry4">¿De qué ciudad sos?</label>
+                    <input type="text" class="form-control" id="inputCity" placeholder="CABA, Zona norte, Zona sur...">
+                </div>
         </div>
                 <div class="form-group col-md-4">
                     <label for="inputProg">¿Sabes programar?</label>
@@ -89,36 +87,36 @@
             </div>
         </div>
                 <button type="submit" class="btn btn-primary">Ingresar</button>
-    </form>
-    <!-- Fin form -->
+</form>
+</div>
+<!-- Fin form -->
 <!-- Inicio footer -->
 <div class="container">
-    <footer class="py-3 my-4 bg-white" id="footer__final">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+    <footer class="py-3 my-4" id="footer__final">
+        <ul class="nav justify-content-center border-bottom pb-md-1 mb-md-4">
             <li class="nav-item">
-                <a href="./index.html" class="nav-link px-2 text-body-secondary">
+                <a href="/index.html" class="nav-link px-2 text-body-secondary">
                     <button type="button" class="btn btn-outline-primary">Ir al inicio</button>
                 </a></li>
             <li class="nav-item">
-                <a href="./html/contacto__final.html" class="nav-link px-2 text-body-secondary">
+                <a href="/html/contacto__final.html" class="nav-link px-2 text-body-secondary">
                     <button type="button" class="btn btn-outline-primary">Contacto</button>
                 </a></li>
             <li class="nav-item">
-                <a href="./html/portafolio__final.html" class="nav-link px-2 text-body-secondary">
+                <a href="/html/portafolio__final.html" class="nav-link px-2 text-body-secondary">
                     <button type="button" class="btn btn-outline-primary">Portafolio</button>
                 </a></li>
             <li class="nav-item">
-                <a href="./html/crypto__final.html" class="nav-link px-2 text-body-secondary">
+                <a href="/html/crypto__final.html" class="nav-link px-2 text-body-secondary">
                     <button type="button" class="btn btn-outline-primary">Criptomonedas</button>
                 </a></li>
             <li class="nav-item">
-                <a href="./html/nft__final.html" class="nav-link px-2 text-body-secondary">
+                <a href="/html/nft__final.html" class="nav-link px-2 text-body-secondary">
                     <button type="button" class="btn btn-outline-primary">NFT</button>
                 </a></li>
         </ul>
         <p class="text-center text-body-secondary"> Finargy.com</p>
         <p class="text-center text-body-secondary text-black-50"> 2023</p>
-        <p class="text-center text-body-secondary">Made with ❤ in Argentina</p>
     </footer>
 </div>
 
