--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <header class="container-fluid">
     <a href="./index.html" class="logo sticky-top" id="#" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000"><h1 class="d-inline p-2 bg-dark text-white">Finanzas2GO</h1></a>
     <div class="container d-flex align-items-center justify-content-end">
-        <button class="btn btn-dark btn-outline-ligth btn-l btn-lg hamburger_menu" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
+        <button class="btn bg-white text-black btn-outline-ligth btn-l btn-lg hamburger_menu" data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasWithBothOptions" aria-controls="offcanvasWithBothOptions">
         Menú <i class="fa-solid fa-bars fa-lg"></i>
         </button>
     </div>
@@ -46,11 +46,11 @@
                 <li><a href="./html/portafolio__final.html" class="menu_color">Tú portafolio</a></li>
             </ul>
         </div>
+        <p class="text-center text-body-secondary">Made with ❤ in Argentina</p>
     </div>
 </div>
 <!-- Offcavas fin -->
 <!-- Fin del encabezado -->
-<!-- Final navBar -->
     <!-- Presentación de la página -->
     <div class="container p-3 my-3 bg-primary text-white">
             <h1 class="text-white text-center">Bienvenido a tu página favorita acerca de finanzas</h1>
@@ -59,8 +59,7 @@
     </div>
     <div class="container-sm border bg-success text-white">NOTICIAS PRINCIPALES DEL DÍA DE HOY</div>
 <!--botónup-->
-<a href="#" class="boton-top"><i class="fa-sharp fa-solid fa-arrow-up fa-bounce"></i>
-</a>
+<a href="#" class="boton-top"><i class="fa-sharp fa-solid fa-arrow-up fa-bounce"></i></a>
 <!--Primer articulo-->
 <div class="container">
         <div class="row">
@@ -130,12 +129,12 @@
                             <p class="text-bg-success">Las plataformas de trading y compra/venta de criptomonedas han crecido de manera impresionante, facilitando el acceso y la gestión de criptomonedas para usuarios de todo el mundo. A medida que la demanda continúa creciendo, estas plataformas desempeñarán un papel clave en el ecosistema de las criptomonedas, permitiendo a los usuarios participar en este emocionante mercado.
                             </p>
                             <!-- Widget de BINANCE para mostrar distintas crypto-->
-                            <script src="https://public.bnbstatic.com/unpkg/growth-widget/cryptoCurrencyWidget@0.0.9.min.js" ></script><div class="binance-widget-marquee" data-cmc-ids="1,1027,52,1839,3408,5426,74,3890,5805,7083" data-theme="light" data-transparent="false" data-locale="en" data-powered-by="Powered by" data-disclaimer="Disclaimer" >
+                            <script src="https://public.bnbstatic.com/unpkg/growth-widget/cryptoCurrencyWidget@0.0.9.min.js" ></script><div class="binance-widget-marquee" data-cmc-ids="1,1027,52,1839,3408,5426,74,3890,5805,7083" data-theme="light" data-transparent="false" data-locale="en">
                             </div>
                     </article></section>
     </div>
 </div>
-    <!--  Noticias secundarias -->
+<!--  Noticias secundarias -->
 <div class="container">
     <section data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
         <div class="container-sm text-bg-warning mt-5 text-white" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">NOTICIAS SECUNDARIAS DEL DÍA DE HOY</div>  
@@ -158,35 +157,29 @@
                         </p>
                 </article></section>
 </div>
-
 <!-- Inicio footer -->
 <div class="container">
-    <footer class="py-3 my-4 bg-white" id="footer__final">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+    <footer class="py-3 my-4" id="footer__final">
+        <ul class="nav justify-content-center border-bottom pb-md-1 mb-md-4">
             <li class="nav-item">
-                <a href="./index.html" class="nav-link px-2 text-body-secondary">
-                    <button type="button" class="btn btn-outline-primary">Ir al inicio</button>
-                </a></li>
-            <li class="nav-item">
-                <a href="./html/contacto__final.html" class="nav-link px-2 text-body-secondary">
+                <a href="/html/contacto__final.html" class="nav-link px-2">
                     <button type="button" class="btn btn-outline-primary">Contacto</button>
                 </a></li>
             <li class="nav-item">
-                <a href="./html/portafolio__final.html" class="nav-link px-2 text-body-secondary">
+                <a href="/html/portafolio__final.html" class="nav-link px-2 text-body-secondary">
                     <button type="button" class="btn btn-outline-primary">Portafolio</button>
                 </a></li>
             <li class="nav-item">
-                <a href="./html/crypto__final.html" class="nav-link px-2 text-body-secondary">
+                <a href="/html/crypto__final.html" class="nav-link px-2 text-body-secondary">
                     <button type="button" class="btn btn-outline-primary">Criptomonedas</button>
                 </a></li>
             <li class="nav-item">
-                <a href="./html/nft__final.html" class="nav-link px-2 text-body-secondary">
+                <a href="/html/nft__final.html" class="nav-link px-2 text-body-secondary">
                     <button type="button" class="btn btn-outline-primary">NFT</button>
                 </a></li>
         </ul>
         <p class="text-center text-body-secondary"> Finargy.com</p>
         <p class="text-center text-body-secondary text-black-50"> 2023</p>
-        <p class="text-center text-body-secondary">Made with ❤ in Argentina</p>
     </footer>
 </div>
 
